--- a/.github/workflows/baseline-contract.yml
+++ b/.github/workflows/baseline-contract.yml
@@ -35,6 +35,26 @@ jobs:
         run: |
           git fetch origin ("+refs/heads/{0}:refs/remotes/origin/{0}" -f $env:BASE_BRANCH) --prune
 
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+
+      - name: Install Python deps (optional)
+        shell: pwsh
+        run: |
+          python -m pip install --upgrade pip
+          if (Test-Path ./requirements.txt) { python -m pip install -r ./requirements.txt } else { Write-Host "No requirements.txt (skip)" }
+
+      - name: Lake diag regression (STRICT PASS)
+        shell: pwsh
+        run: |
+          pwsh -ExecutionPolicy Bypass -File ./tools/run_lake_diag_regression.ps1
+
+      - name: CSV schema contract check
+        shell: pwsh
+        run: |
+          pwsh -ExecutionPolicy Bypass -File ./tools/check_csv_schema_contract.ps1
       - name: Baseline contract check
         shell: pwsh
         env:
