--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ eu5_locations_master_*.csv
 eu5_locations_master_run_report_*.json
 eu5_locations_raw_*.txt
 .gitignore.bak.*
+
+# local temp/log/backup (do not commit)
+.tmp/
+_tmp_ci_*.txt
+*.bak.*
