--- a/.github/workflows/baseline-contract.yml
+++ b/.github/workflows/baseline-contract.yml
@@ -9,7 +9,7 @@ jobs:
   baseline-contract:
     runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
         with:
           fetch-depth: 0
 
@@ -177,7 +177,7 @@ jobs:
 
       - name: Setup Python
         if: ${{ env.HAS_EU5_ASSETS == 'true' }}
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
         with:
           python-version: "3.x"
 
