--- a/.github/workflows/baseline-contract.yml
+++ b/.github/workflows/baseline-contract.yml
@@ -5,9 +5,16 @@ on:
   push:
     branches:
       - '**'
+permissions:
+  contents: read
+
+concurrency:
+  group: baseline-contract-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   baseline-contract:
     runs-on: ubuntu-24.04
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
         with:
